parser/src/test/resources/corpus/valid/37_nested_when.ff
rule "Nested When" {
  when a > b then
    when c > d then publish first
    else publish second
}
