parser/src/test/resources/corpus/invalid/35_when_missing_cond.ff
rule "When Missing Cond" {
  when then publish fee
}
